# giga-chess-server

./: .gitignore  Cargo.toml  Makefile  README.md  diesel.toml
.github/workflows/: test.yml
config/: .env.dev
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml
migrations/0_initial_migration/: down.sql  up.sql
migrations/2025-06-16-142533_create_users_table/: up.sql
src/: api.rs  app.rs  database.rs  lib.rs  main.rs  tests.rs
src/api/: docs.rs  extractors.rs  models.rs  routes.rs
src/api/extractors/: authentication.rs  login_data.rs  register_data.rs
src/api/models/: body.rs  login_response.rs  message_response.rs  response.rs
src/api/models/body/: login.rs  login_data.rs  register.rs  register_data.rs  room_creation.rs  uuid.rs
src/api/models/general/: pagination.rs
src/api/models/query/: pagination.rs
src/api/models/response/: room_creation.rs  room_info.rs  room_list.rs  session_info.rs  user_info.rs
src/api/resources/: ping.rs
src/api/routes/: login.rs  ping.rs  register.rs  room.rs
src/api/routes/room/: join.rs
src/app/: config.rs  error.rs  security.rs  services.rs  state.rs
src/app/services/: room.rs  session.rs  user.rs
src/database/: models.rs  schema.rs  stores.rs  types.rs
src/database/models/: invite_code.rs  room.rs  session.rs  user.rs
src/database/stores/: invite_code.rs  room.rs  session.rs  user.rs
src/database/types/: serialized_game.rs
src/tests/: integration.rs  stores.rs
src/tests/integration/: test_register_login.rs  test_rooms.rs
src/tests/stores/: test_user_store.rs
test/: .env.test  Dockerfile  Makefile  docker-compose.yml
types/: Cargo.toml
types/src/: body.rs  lib.rs  validation.rs
types/src/body/: login.rs  register.rs  room_creation.rs  uuid.rs
types/src/general/: pagination.rs
types/src/query/: pagination.rs
types/src/response/: login.rs  message.rs  room_info.rs  room_list.rs  session_info.rs  user_info.rs
types/src/validation/: alphanumeric.rs  uuid.rs
