[package]
name = "giga-chess-server"
version = "0.1.0"
edition = "2024"
default-run = "giga-chess-server"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["http2", "ws"] }
axum-valid = { version = "0.23.0", features = ["basic"] }
bincode = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
futures = "0.3.31"
giga-chess = { version = "0.8.2", features = ["bincode"] }
giga-chess-api-types = { path = "types", features = ["all"] }
governor = "0.8.0"
jsonwebtoken = "9.3.1"
moka = { version = "0.12.10", features = ["future"] }
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower_governor = "0.7.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
utoipa = "5.4.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
axum-test = "17.3.0"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
