[package]
name = "giga-chess-api-types"
description = "A library providing shared types between giga-chess client and server."
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Zitronenjoghurt/giga-chess-server/tree/main/types"

[features]
all = ["axum", "serde", "utoipa", "uuid", "validator"]

[dependencies]
axum = { version = "0.8.4", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
utoipa = { version = "5.4.0", optional = true }
uuid = { version = "1.17.0", features = ["v4"], optional = true }
validator = { version = "0.20.0", features = ["derive"], optional = true }
